fixed navbar buttons, footer, some other bits

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,7 +4,8 @@
       xmlns="http://www.w3.org/1999/html">
 
   <th:block th:fragment="footer">
-    <footer class="footer bg-white">
+    <div style="height:50px; clear: both;"></div>
+    <footer class="footer bg-white p-4 mt-4 d-flex justify-content-center" style="font-size: x-small;border-top-left-radius: 40px; border-top-right-radius: 40px;">
       HealthPointsFitness - Created 2023 by the A-Team
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
