--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -48,13 +48,13 @@
                 </ul>
             </div>
             <div sec:authorize="isAnonymous()">
-                <a href="/register">
-                    <button class="btn btn-primary" type="submit">Register</button>
+                <a href="/login">
+                    <button class="btn btn-primary" type="submit">Login</button>
                 </a>
             </div>
             <div sec:authorize="isAuthenticated">
                 <form th:action="@{/logout}" method="post" class="logout-button-form">
-                    <button class="btn btn-primary" type="submit">LOGOUT</button>
+                    <button class="btn btn-primary" type="submit"><i class="bi bi-box-arrow-right"></i></button>
                 </form>
             </div>
         </div>
