--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:sec="http://www.thymeleaf.org/extras/spring-security"  xmlns:th="http://www.thymeleaf.org">
-  <head>
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:th="http://www.thymeleaf.org">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,122 +9,209 @@
     <style>
 
     </style>
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <th:block th:replace="~{fragments/navbar.html :: navbar}"></th:block>
+<!--    <th:block th:replace="~{fragments/navbar.html :: navbar}"></th:block>-->
+<nav class="navbar bg-body-tertiary sticky-top fixed">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/landing">
+            <img height="80px" src="/img/logo.gif">
+        </a>
+        <div class="dropdown ms-auto me-1">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                Menu
+            </button>
+            <ul class="dropdown-menu">
+                <li>
+                    <a class="dropdown-item" sec:authorize="hasRole('ROLE_ADMIN') && isAuthenticated()"
+                       th:href="@{/admin/landing}">
+                        <i class="bi bi-diagram-3-fill"></i>
+                        <button type="button" class="btn w-100">Create Paths</button>
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" sec:authorize="hasRole('ROLE_CLIENT') && isAuthenticated()"
+                       th:href="@{/profile/{uname}(uname=${#authentication.name})}">
+                        <i class="bi bi-person-fill"></i>
+                        <button type="button" class="btn w-100">Profile</button>
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item"
+                       sec:authorize="hasRole('ROLE_CLIENT') || hasRole('ROLE_ADMIN') && isAuthenticated()"
+                       th:href="@{/user/friend_requests}">
+                        <i class="bi bi-people-fill"></i>
+                        <button type="button" class="btn w-100">Buddies</button>
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" sec:authorize="hasRole('ROLE_CLIENT') && isAuthenticated()"
+                       th:href="@{/allPaths}">
+                        <i class="bi bi-diagram-3-fill"></i>
+                        <button type="button" class="btn w-100">Paths</button>
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" sec:authorize="hasRole('ROLE_CLIENT') && isAuthenticated()"
+                       th:href="@{/user/goals}">
+                        <i class="bi bi-list-task"></i>
+                        <button type="button" class="btn w-100">Goals</button>
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item"
+                       sec:authorize="isAnonymous() || isAuthenticated() || isFullyAuthenticated()"
+                       th:href="@{/aboutUs}">
+                        <i class="bi bi-person-vcard"></i>
+                        <button type="button" class="btn w-100">About Us</button>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div sec:authorize="isAuthenticated">
+            <form th:action="@{/logout}" method="post" class="logout-button-form">
+                <button class="btn btn-primary" type="submit">LOGOUT</button>
+            </form>
+        </div>
+        <div sec:authorize="!isAuthenticated">
+          <form th:action="@{/register}" method="get" class="logout-button-form">
+            <button class="btn btn-primary" type="submit">Register</button>
+          </form>
+        </div>
+    </div>
+</nav>
 
-    <div class="container my-5">
-      <div class="column" style="border-radius: 10px;">
-        <div class="row d-flex justify-content-center bg-light p-3" th:if="${param.error}" th:text="${param.error != null ? 'Oops. There was an error logging in.' : ''}"/>
-        <div class="row d-flex justify-content-center bg-light p-3" th:if="${param.logout}" th:text="${param.logout != null ? 'You have logged out.' : ''}"/>
-        <div class="row d-flex justify-content-center bg-light p-3" sec:authorize="isAuthenticated()" th:text="${param.logout == null && param.error == null ? 'You are logged in.' : ''}"/>
+<div class="container my-5">
+    <div class="column" style="border-radius: 10px;">
+        <div class="row d-flex justify-content-center bg-light p-3" th:if="${param.error}"
+             th:text="${param.error != null ? 'Oops. There was an error logging in.' : ''}"/>
+        <div class="row d-flex justify-content-center bg-light p-3" th:if="${param.logout}"
+             th:text="${param.logout != null ? 'You have logged out.' : ''}"/>
+        <div class="row d-flex justify-content-center bg-light p-3" sec:authorize="isAuthenticated()"
+             th:text="${param.logout == null && param.error == null ? 'You are logged in.' : ''}"/>
         <a href="/admin/landing" sec:authorize="isAuthenticated()">
-          <button>Go To Profile</button>
+            <button>Go To Profile</button>
         </a>
 
         <div class="row bg-light my-3 p-4">
-          <!-- Img Side -->
-          <div class="col col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
-            <img src="/img/login.webp" class="rounded" style="width: 100%"/>
-          </div>
+            <!-- Img Side -->
+            <div class="col col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
+                <img src="/img/login.webp" class="rounded" style="width: 100%"/>
+            </div>
 
-          <!-- Form Side -->
-          <div class="col-lg-6 m-0 shadow d-flex justify-content-center align-items-center">
-            <form name="loginForm" class="d-flex justify-content-center align-items-center m-0 p-4 rounded" style="width: 100%" sec:authorize="!isAuthenticated()" th:action="@{/login}" th:method="post">
-              <div class="card m-0" style="width: 100%;">
-                <div class="card-body m-0">
-                  <div class="card-text">
-                    <div class="mb-3">
-                      <label for="username" class="form-label">Username</label>
-                      <input type="text" name="username" class="form-control" id="username" placeholder="Username">
+            <!-- Form Side -->
+            <div class="col-lg-6 m-0 shadow d-flex justify-content-center align-items-center">
+                <form name="loginForm" class="d-flex justify-content-center align-items-center m-0 p-4 rounded"
+                      style="width: 100%" sec:authorize="!isAuthenticated()" th:action="@{/login}" th:method="post">
+                    <div class="card m-0" style="width: 100%;">
+                        <div class="card-body m-0">
+                            <div class="card-text">
+                                <div class="mb-3">
+                                    <label for="username" class="form-label">Username</label>
+                                    <input type="text" name="username" class="form-control" id="username"
+                                           placeholder="Username">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="password" class="form-label">Password</label>
+                                    <input type="password" name="password" placeholder="Password" class="form-control"
+                                           id="password">
+                                </div>
+                            </div>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary submitBtn" id="login" style="width: 100%;">
+                                    Login
+                                </button>
+                            </div>
+                            <div class="text-center mt-2">
+                                <a href="/recover">
+                                    <button type="button" class="btn btn-primary submitBtn" style="width: 100%;">Recover
+                                        Account
+                                    </button>
+                                </a>
+                            </div>
+                            <br>
+                            <div class="row mt-5">
+                                <div class="col text-center">
+                                    <div class="row">
+                                        <div class="col pe-0">
+                                            <hr>
+                                        </div>
+                                        <div class="col px-0">or</div>
+                                        <div class="col ps-0">
+                                            <hr>
+                                        </div>
+                                    </div>
+                                    <button id="regBtn" type="submit" class="btn btn-primary submitBtn"
+                                            style="width: 100%;">Register
+                                    </button>
+                                    <!--                                    <a href="/recover">Register</a>-->
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="mb-3">
-                      <label for="password" class="form-label">Password</label>
-                      <input type="password" name="password" placeholder="Password" class="form-control" id="password">
-                    </div>
-                  </div>
-                  <div class="text-center">
-                    <button type="submit" class="btn btn-primary submitBtn" id="login" style="width: 100%;">Login</button>
-                  </div>
-                  <div class="text-center mt-2">
-                    <a href="/recover"><button type="button" class="btn btn-primary submitBtn"  style="width: 100%;">Recover Account</button></a>
-                  </div>
-                  <br>
-                  <div class="row mt-5">
-                    <div class="col text-center">
-                      <div class="row">
-                        <div class="col pe-0"><hr></div>
-                        <div class="col px-0">or</div>
-                        <div class="col ps-0"><hr></div>
-                      </div>
-                      <button id="regBtn" type="submit" class="btn btn-primary submitBtn" style="width: 100%;">Register</button>
-                      <!--                                    <a href="/recover">Register</a>-->
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
+                </form>
+            </div>
         </div>
-      </div>
     </div>
+</div>
 
-    <!--Validation Errors Modal-->
-    <div class="modal" tabindex="-1" id="errorsModal">
-      <div class="modal-dialog">
+<!--Validation Errors Modal-->
+<div class="modal" tabindex="-1" id="errorsModal">
+    <div class="modal-dialog">
         <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Please Try Again</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body" id="errors_body">
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          </div>
+            <div class="modal-header">
+                <h5 class="modal-title">Please Try Again</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" id="errors_body">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
         </div>
-      </div>
     </div>
-    <th:block th:replace="~{fragments/footer.html :: footer}"/>
+</div>
+<th:block th:replace="~{fragments/footer.html :: footer}"/>
 
-    <script src="/js/vigosvalidator.js"></script>
-    <script defer>
-      //Get the errors modal
-      const errorsModal = new bootstrap.Modal('#errorsModal', {})
+<script src="/js/vigosvalidator.js"></script>
+<script defer>
+    //Get the errors modal
+    const errorsModal = new bootstrap.Modal('#errorsModal', {})
 
-      //Get the body section of the errors modal
-      const errorsBody = document.getElementById('errors_body')
+    //Get the body section of the errors modal
+    const errorsBody = document.getElementById('errors_body')
 
-      //Get the username element
-      const username = document.getElementById("username")
+    //Get the username element
+    const username = document.getElementById("username")
 
-      //Get the password element
-      const password = document.getElementById("password")
+    //Get the password element
+    const password = document.getElementById("password")
 
-      //form validation
-      document.getElementById("login").onclick = (e)=> {
+    //form validation
+    document.getElementById("login").onclick = (e) => {
         e.preventDefault() //Prevent the form from being submitted
 
         //Do some validation checks on the username and password
-        if (username.value.length > 0 && password.value.length > 0 && checkPassword(password,{
-          min : 4,
-          max : 20,
-          hasSpecial : 1,
-          hasNumber : 1
-        },errorsModal,errorsBody) && checkUsername(username,errorsBody,errorsModal)) {
+        if (username.value.length > 0 && password.value.length > 0 && checkPassword(password, {
+            min: 4,
+            max: 20,
+            hasSpecial: 1,
+            hasNumber: 1
+        }, errorsModal, errorsBody) && checkUsername(username, errorsBody, errorsModal)) {
 
-          //If all validation checks pass submit the form to the backend.
-         document.forms["loginForm"].submit()
+            //If all validation checks pass submit the form to the backend.
+            document.forms["loginForm"].submit()
         }
-      }
+    }
 
-      //When the registration button is pressed
-      document.getElementById("regBtn").onclick = (e)=> {
+    //When the registration button is pressed
+    document.getElementById("regBtn").onclick = (e) => {
         e.preventDefault() //Prevent the form from being submitted
-        window.location.href="/register" //Send the user to the registration page
-      }
-    </script>
-  </body>
+        window.location.href = "/register" //Send the user to the registration page
+    }
+</script>
+</body>
 </html>
