--- a/src/main/resources/templates/recover.html
+++ b/src/main/resources/templates/recover.html
@@ -18,15 +18,15 @@
 <body>
   <th:block th:replace="~{fragments/navbar.html :: navbar}"/>
   <div class="container d-flex flex-column justify-content-center align-items-center" style="height: 80vh;">
-      <div class="">
-          <img src="/img/logo.svg" class="mb-4 img-fluid"/>
-          <div class="logo"></div>
+      <div class="d-flex justify-content-center flex-column">
+          <img src="/img/logo.svg" class="mb-4 img-fluid bg-white rounded-3 p-4"/>
+          <div class="logo bg-white card"></div>
           <form th:action="@{/recover}" th:method="POST">
-              <div class="row">
-                  <div class="col-md-6 mb-4">
+              <div class="row d-flex justify-content-center rounded-4">
+                  <div class="col-md-6 mb-4 bg-light p-5">
                       <input type="email" class="form-control w-100" placeholder="Enter your email" name="email"/>
                   </div>
-                  <div class="col-12 col-md-6 d-flex flex-row mb-4 justify-content-center" >
+                  <div class="col-12 col-md-6 d-flex flex-row mb-4 justify-content-center bg-light p-5" >
                       <button type="submit" class="btn btn-primary me-2">Send Recovery</button>
                       <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#infoModal">
                           <i class="bi bi-patch-question-fill"></i>
