added jitsi back

--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -403,7 +403,7 @@
         </div>
     </div>
 </div>
-<h3 class="d-flex justify-content-center">Join the Crew</h3>
+<h3 class="d-flex justify-content-center bg-light rounded-4">Join the Crew</h3>
 <div id="meet" class="m-5"></div>
 <div style="height: 60px;clear: both;"></div>
 <th:block th:replace="~{fragments/footer.html}"></th:block>
