added custom error page

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -16,7 +16,7 @@
         <br/>
         <img src="/img/weehoo.png"/>
         <br/>
-        <p class="card-text"><span>Sorry We've Had a Booboo. Let's get your squared away.</span></p>
+        <p class="card-text"><span>Sorry we've had a booboo! Let's get you squared away!</span></p>
         <a href="/landing" class="btn btn-primary">Go Home</a>
       </div>
     </div>
