--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -96,17 +96,17 @@
             <button>Go To Profile</button>
         </a>
 
-        <div class="row bg-light my-3 p-4">
+        <div class="row bg-light my-3 p-4 rounded">
             <!-- Img Side -->
             <div class="col col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
                 <img src="/img/login.webp" class="rounded" style="width: 100%"/>
             </div>
 
             <!-- Form Side -->
-            <div class="col-lg-6 m-0 shadow d-flex justify-content-center align-items-center">
+            <div class="col-lg-6 m-0 d-flex justify-content-center align-items-center">
                 <form name="loginForm" class="d-flex justify-content-center align-items-center m-0 p-4 rounded"
                       style="width: 100%" sec:authorize="!isAuthenticated()" th:action="@{/login}" th:method="post">
-                    <div class="card m-0" style="width: 100%;">
+                    <div class="card m-0 shadow" style="width: 100%;">
                         <div class="card-body m-0">
                             <div class="card-text">
                                 <div class="mb-3">
