--- a/src/main/resources/templates/users/goals.html
+++ b/src/main/resources/templates/users/goals.html
@@ -40,11 +40,11 @@
 
     <ul class="list-group mt-3" style="clear: both;">
         <li class="list-group-item" th:each="item : ${goals}">
-            <div class="row p-3">
-                <span class="col-sm-3 col-xs-12 ps-0"><strong th:text="${item.title}"></strong></span>
-                <span class="col-sm-5 col-xs-12 ps-0 mb-2"><em th:text="${item.description}"></em></span>
-                <span class="col-sm-2 col-xs-12 ps-0 mb-2 ms-4"><th:block th:text="${item.completed} ? 'COMPLETE' : 'PENDING'"></th:block></span>
-                <div class="col-sm-2 col-xs-12 d-flex justify-content-between align-items-center p-0">
+            <div class="row p-3 d-flex justify-content-between align-items-center">
+                <span class="col-sm-2 col-xs-12 p-0"><strong th:text="${item.title}"></strong></span>
+                <span class="col-sm-6 col-xs-12 p-0"><em th:text="${item.description}"></em></span>
+                <span class="col-sm-2 col-xs-12 p-0"><th:block th:text="${item.completed} ? 'COMPLETE' : 'PENDING'"></th:block></span>
+                <div class="col-md-2 col-sm-12 d-flex justify-content-between align-items-center mt-2 p-0">
                     <form th:action="@{/users/goals/delete/{id}(id=${item.id})}" method="post">
                         <button type="submit" class="btn btn-danger m-1">
                             <i class="bi bi-trash3-fill deleteBtn" th:item="${item.getId()}"></i>
