--- a/src/main/resources/templates/users/friends.html
+++ b/src/main/resources/templates/users/friends.html
@@ -566,7 +566,7 @@
                 const img = document.createElement('img')
 
                 if(user.profileImageDataUrl.substring(0,"data:image/png;base64,".length) !== "data:image/png;base64,") {
-                    img.src = "data:image/jpeg;base64," + user.profileImageDataUrl
+                    img.src = "data:image/png;base64," + user.profileImageDataUrl
                 }else{
                     img.src = user.profileImageDataUrl
                 }
